Figure out how to use serde_macro and friends correctly
After a lot of messing around, I managed to figure out how to use Serde 0.4.0
correctly. I *really* wish I'd found
http://erickt.github.io/blog/2015/05/18/serde-0-dot-4-0-now-supports-macros-in-stable-rust/
earlier, as it actually has the process documented, where the GitHub README.md
does not.

At the moment, all this really has it a bogus Point struct which I can
serialize to a string and deserialize from a string as JSON, and prove to my
satisfaction that it's valid both ways. Next I have to dig into the Avro schema
spec and turn that into a viable object model I can manipulate with Serde.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,18 @@
 name = "ravro"
 version = "0.1.0"
 authors = ["Glenn McAllsiter <glenn.mcallister@gmail.com>"]
+license = "Apache-2.0"
+build = "build.rs"
+
+[features]
+default = ["with_syntex"]
+nightly = ["serde_macros"]
+with_syntex = ["syntex", "serde_codegen"]
+
+[build-dependencies]
+syntex = { version = "*", optional = true }
+serde_codegen = { version = "*", optional = true }
 
 [dependencies]
-serde = "0.4.2"
+serde = { version = "*", optional = false }
+serde_macros = { version = "*", optional = true }
