Added basid SimpleType.is_valid method
Because we have to do a post-deserialization check to verify that a SimpleType
is one of the 8 allowed types, wrap up the check in a method and test it.

--- a/src/lib.rs.in
+++ b/src/lib.rs.in
@@ -69,6 +69,15 @@ pub struct SimpleType {
     pub raw_type: RawSimpleType,
 }
 
+impl SimpleType {
+    pub fn is_valid(&self) -> Result<(), &'static str> {
+        match SimpleTypeEnum::from_raw(&self.raw_type) {
+            Some(..)    => Ok(()),
+            None        => Err("Not a valid simple type"),
+        }
+    }
+}
+
 #[derive(Serialize, Deserialize, Debug)]
 pub enum ComplexType {
     Record,
