Implement Schma::fullname() for record type
This is probably a bigger commit than it should be, since I've also re-org'ed
the unit tests yet again into modules to make it easier to track what each test
is doing.

At any rate, the change brings in the regex crate, as the easiest way to check
each name element for validity is to satisfy the regular expression
[A-Za-z_][A-Za-z0-9_], which can't be done (AFAIK) with the std::* modules.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,4 @@ serde_codegen = { version = "*", optional = true }
 [dependencies]
 serde = { version = "*", optional = false }
 serde_macros = { version = "*", optional = true }
+regex = { version = "0.1.39", optional = false }
